fix alignment of groups

--- a/css/contacts.css
+++ b/css/contacts.css
@@ -117,11 +117,14 @@
 
 #grouplist { z-index: 100; }
 #grouplist .oc-addnew-init { padding: 0 16px; }
-#grouplist .add-contact:before {
+#grouplist .add-new a:before {
 	content: '+';
 	font-weight: bold;
 	font-size: 180%;
+	padding-right: 5px;
 }
+
+
 #grouplist li .action:not(.starred):not(.checked):not(.favorite):not([class^="add-"]) { display: none; padding: 0; }
 #grouplist li:not([data-type="shared"]):not(.editing):hover .action.numcontacts,
 #grouplist li:not([data-type="shared"]):not(.editing) .active.action.numcontacts { display: inline-block; }
@@ -130,7 +133,6 @@
 #grouplist li.active[data-type="category"]:not(.editing):hover .action.edit { display: inline-block; width: 20px; height: 20px; }
 /*#grouplist li:not(.editing) .action.delete { width: 20px; height: 20px; }*/
 #grouplist .group span.numcontacts { width: 30px; text-align: right; margin-right: 10px !important; }
-#grouplist li.special { line-height: 40px; }
 
 /* First run */
 
